tests/build/fail/widget/invalid_special.stderr
error: unexpected `foo!` as default value
 --> $DIR/invalid_special.rs:8:18
  |
8 |         margin = foo!;
  |                  ^^^

warning: unused import: `zero_ui::properties::margin`
 --> $DIR/invalid_special.rs:5:9
  |
5 |     use zero_ui::properties::margin;
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default
